[metadata]
name = watermark
version = 0.1b3
author = Tiger-222
author-email = contact@tiger-222.fr
description = GUI to watermark your pictures.
long_description = file: README.md
url = https://github.com/BoboTiG/watermark-me
keywords = watermark gui pyqt pillow copyright copyleft
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics

[options]
zip-safe = False
include_package_data = True
packages =
    watermark
    watermark.updater
python_requires = >=3.6.5

[options.package_data]
* = *.cfg, *.md, *.txt

[coverage:report]
show_missing = True
omit =
    watermark/__main__.py
    watermark/constants.py
    watermark/updater/windows.py
    # TODO: issue #1
    watermark/gui/*

[flake8]
ignore =
    # E203 whitespace before ':', but E203 is not PEP 8 compliant
    E203
    # W503 line break before binary operator, but W503 is not PEP 8 compliant
    W503
max-line-length = 120
exclude =
    .git
    .tox

[tool:pytest]
addopts =
    --cov-report=term-missing
    --cov=watermark
    --showlocals
    --strict
    --failed-first
    --no-print-logs
    -r fE
